# snake-rs

./: .gitignore  1.bundle.js  Cargo.toml  Makefile  bundle.js  index.html  package-lock.json  package.json  webpack.config.js
src/: coord.rs  draw.rs  field.rs  game.rs  lib.rs  snake.rs
web/: index.html  index.js  main.css  main.js
