[package]
name = "snake-rs"
version = "0.1.0"
authors = ["Markov Alexey <markovalex95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen="0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
log = "0.4.6"
wasm-logger = "0.2.0"
js-sys="0.3"
[dependencies.web-sys]
version="0.3"
features = ["console", "Window", "Document", "Element", "Node",
    "HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d",
    "KeyboardEvent"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
